--- a/src/dbm/Dockerfile
+++ b/src/dbm/Dockerfile
@@ -1,9 +1,12 @@
 FROM python:3.12-slim
 
-ADD . /dbm
 WORKDIR /dbm
 
+COPY requirements.txt .
+
 RUN pip3 install -r requirements.txt
+
+COPY app.py .
 
 EXPOSE 5000
 
