--- a/src/gateway/Dockerfile
+++ b/src/gateway/Dockerfile
@@ -1,9 +1,13 @@
 FROM python:3.12-slim
 
-ADD . /gateway
+
 WORKDIR /gateway
 
+COPY requirements.txt .
+
 RUN pip3 install -r requirements.txt
+
+COPY app.py .
 
 EXPOSE 5000
 
